# EE6470

final/: README.md  Report.md
final/final_syn/LU_para2/: LU.cpp  System.cpp  System.h  Testbench.cpp  Testbench.h
final/final_syn/LU_para2/stratus/: project.tcl
final/final_syn/LU_para4/: Makefile  System.cpp  System.h  Testbench.cpp  Testbench.h  unit1.cpp  unit1.h  unit2.cpp  unit2.h  unit3.cpp  unit4.cpp  unit4.h
final/final_syn/LU_parapipe2/: Makefile  System.cpp  System.h  Testbench.cpp  shift2.cpp  shift2.h  unit1.cpp  unit2.cpp
final/final_syn/LU_parapipe4/: LU.h  System.cpp  System.h  Testbench.cpp  shift1.cpp  shift1.h  shift2.h  shift3.cpp  shift3.h  shift4.cpp  shift4.h  unit1.cpp  unit2.cpp  unit3.cpp  unit3.h  unit4.cpp
final/final_syn/LU_test1/: System.cpp  System.h  Testbench.cpp  Testbench.h
final/riscv-vp/vp/src/platform/basic-acc-gaussian/: CMakeLists.txt  main.cpp
final/riscv-vp/vp/src/platform/final32/: CMakeLists.txt  LU.h  main.cpp
final/riscv-vp/vp/src/platform/finalpara/: CMakeLists.txt  filter_def.h  main.cpp  para_unit1.h  para_unit3.h  para_unit4.h
final/riscv-vp/vp/src/platform/finalpipe/: CMakeLists.txt  LU.h  filter_def.h  main.cpp  mul.h  shift.h
hw1/: README.md
hw1/gaussian_fifo/: CMakeLists.txt  Testbench.cpp  Testbench.h  gaussianFilter.cpp  gaussianFilter.h  main.cpp
hw1/gaussian_fifo_v2/: Testbench.cpp  Testbench.h  gaussianFilter.cpp  gaussianFilter.h  main.cpp
hw2/: README.md
hw2/gaussian_tlm_bus_mem/: CMakeLists.txt  Testbench.cpp  Testbench.h  filter_def.h  gaussianFilter.cpp  gaussianFilter.h  main.cpp
hw3/: README.md
hw3/gaussian_pipeline/: Testbench.cpp  gaussianFilter.cpp
hw3/gaussian_unrolling/: Makefile  System.h  gaussianFilter.cpp  gaussianFilter.h
hw3/gaussian_unrolling/stratus/: project.tcl
hw4/: README.md
midterm/: README.md
midterm/LU_tlm_bus/: CMakeLists.txt  LU.cpp  LU.h  MemoryMap.h  Testbench.cpp  Testbench.h  filter_def.h  main.cpp
midterm/midterm_syn/LU_pipeline/: LU.cpp  System.h
midterm/midterm_syn/LU_stratus/: Testbench.cpp  Testbench.h  main.cpp
midterm/midterm_syn/LU_unrolling/: LU.cpp  LU.h  Makefile  System.cpp
(+38 files in other folders)
